--- a/TP1/TP1_part1.ipynb
+++ b/TP1/TP1_part1.ipynb
@@ -15,18 +15,9 @@
     "\n",
     "In part II:\n",
     "- Other basic building blocks of deep networks: convolutional layers and non-linearities.\n",
-    "- Analysis of a standard deep network trained on imagenet.\n",
+    "- Analysis of a standard Convolutionnal Neural Network (CNN) trained on imagenet.\n",
     "\n",
-    "In part III:\n",
-    "- Training a CNN on MNIST. Comparison with a multi-layer perceptron.\n",
-    "- Initialization methods, regularization methods.\n",
-    "\n",
-    "In part IV:\n",
-    "- Training on a graphics card.\n",
-    "- Improving gradient descent: SGD with momentum and progressive learning rate reduction (scheduler).\n",
-    "- Transfer learning: fine-tuning and freezing.\n",
-    "\n",
-    "Duration: 4 h\n",
+    "Duration: 2 h\n",
     "\n",
     "**Part I**\n",
     "\n",
@@ -246,9 +237,11 @@
    "source": [
     "To complete the definition of the perceptron, a decision rule is needed. This rule is natural: for $f(x; \\omega, b) = (p_0, p_1)$, we choose class 0 if $p_0 > p_1$.\n",
     "\n",
-    "We can plot the boundary that delimits the model's decision regions. Provide its equation in the form $x_1 = \\alpha x_0 + \\beta$ where $\\alpha$ and $\\beta$ depend on $\\omega$ and $b$.\n",
+    "We can plot the boundary that delimits the model's decision regions. \n",
     "\n",
-    "**Exercise 2:** Complete the code below to plot it:"
+    "**Exercise 2:** \n",
+    "- Provide its equation in the form $x_1 = \\alpha x_0 + \\beta$ where $\\alpha$ and $\\beta$ depend on $\\omega$ and $b$.\n",
+    "- Complete the code below to plot it:"
    ]
   },
   {
