--- a/TP3/TP3_part1.ipynb
+++ b/TP3/TP3_part1.ipynb
@@ -773,6 +773,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c81b943d-4b2f-4314-9f4a-d53631db4cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git clone https://github.com/relmonta/ml-student.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560c719f-acc0-400d-a30a-deb84e2a6085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! cp ml-student/TP3/utile.py ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5bb7367e-e140-4fb2-ad5a-97904a6a56dd",
    "metadata": {
     "id": "5bb7367e-e140-4fb2-ad5a-97904a6a56dd"
