final release TP3-1

--- a/TP3/TP3_part1.ipynb
+++ b/TP3/TP3_part1.ipynb
@@ -111,7 +111,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cba2f280-3609-4fc6-9d47-ba9eb29236e7",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "cba2f280-3609-4fc6-9d47-ba9eb29236e7",
+    "outputId": "18916826-4cbd-48ec-ab9b-d48ec50ef413"
+   },
    "outputs": [],
    "source": [
     "# Check GPU availability\n",
@@ -132,7 +138,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "3bb6b382-a270-4e4e-b7e5-95943b600159",
-    "outputId": "7c52b5f0-a20b-4916-e643-b9c2ac3346d9"
+    "outputId": "b9dbae32-d5eb-45ee-8a7d-8169a120dd09"
    },
    "outputs": [],
    "source": [
@@ -158,10 +164,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 643
+     "height": 656
     },
     "id": "bd8f19ad-c3db-4b4a-a3f4-d7b90941b0bc",
-    "outputId": "a00dc1d0-12e3-43b4-bfcb-398e864278ba"
+    "outputId": "76c7438e-71c9-4eed-e4a4-10323510d819"
    },
    "outputs": [],
    "source": [
@@ -193,10 +199,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 643
+     "height": 656
     },
     "id": "e74e9396-8ed9-4729-9142-4fd1a6241366",
-    "outputId": "6345cd8e-9e4c-417d-bf57-ddd789a543fd"
+    "outputId": "3fffac25-58ca-42bb-c485-0f2b51a55ff3"
    },
    "outputs": [],
    "source": [
@@ -315,7 +321,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "fd8c3b5f-18c2-4cce-a922-eedf42bdb61c",
-    "outputId": "60beddff-12e8-48eb-a7d1-36f93194130c"
+    "outputId": "fa098d0e-0bd8-4da7-87ae-c22b2dc97095"
    },
    "outputs": [],
    "source": [
@@ -327,7 +333,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4af7e6db-f35b-4934-801c-3260035a9c19",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "4af7e6db-f35b-4934-801c-3260035a9c19",
+    "outputId": "5b569fcb-c3ec-44f3-b2b3-4870510786e8"
+   },
    "outputs": [],
    "source": [
     "print(fcn)"
@@ -401,7 +413,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "5e5b7bf0-4019-4473-b173-4a1f1ce0d6e9",
-    "outputId": "d780cf34-ae57-4d8f-d265-e4257509b888"
+    "outputId": "72ea7c20-42c2-4130-fa4b-ebec30f8a0c9"
    },
    "outputs": [],
    "source": [
@@ -462,7 +474,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "8ad4a0f3-108f-47f5-b7fe-7452547a4c27",
-    "outputId": "fae4db4f-7c48-4257-9335-077a5b693e3c"
+    "outputId": "04fc836a-24c2-4cef-88ae-1f8a9d9afb07"
    },
    "outputs": [],
    "source": [
@@ -631,7 +643,7 @@
      "height": 1000
     },
     "id": "9c7e48ab-584f-4c58-8284-881c29b6fa37",
-    "outputId": "2dd6c106-860a-43bc-f437-b887e9311209"
+    "outputId": "9b043299-ab03-4821-d474-b1c06728fd70"
    },
    "outputs": [],
    "source": [
@@ -667,7 +679,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "f92deea8-818e-4dfb-bb61-ce952f86188b",
-    "outputId": "e62f168f-0956-4673-b9ba-10fa644ae967"
+    "outputId": "59b4f024-4653-4984-dbbe-11b10d29ce50"
    },
    "outputs": [],
    "source": [
@@ -774,7 +786,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c81b943d-4b2f-4314-9f4a-d53631db4cce",
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "c81b943d-4b2f-4314-9f4a-d53631db4cce",
+    "outputId": "95d34ac8-80b1-469e-fff2-174e2216a88a"
+   },
    "outputs": [],
    "source": [
     "! git clone https://github.com/relmonta/ml-student.git"
@@ -784,7 +802,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "560c719f-acc0-400d-a30a-deb84e2a6085",
-   "metadata": {},
+   "metadata": {
+    "id": "560c719f-acc0-400d-a30a-deb84e2a6085"
+   },
    "outputs": [],
    "source": [
     "! cp ml-student/TP3/utile.py ."
@@ -795,7 +815,12 @@
    "execution_count": null,
    "id": "5bb7367e-e140-4fb2-ad5a-97904a6a56dd",
    "metadata": {
-    "id": "5bb7367e-e140-4fb2-ad5a-97904a6a56dd"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 539
+    },
+    "id": "5bb7367e-e140-4fb2-ad5a-97904a6a56dd",
+    "outputId": "edd57cce-aef2-44de-9eb8-6592c9fd009b"
    },
    "outputs": [],
    "source": [
@@ -853,7 +878,11 @@
    "execution_count": null,
    "id": "74504800-b929-4f8f-9f8b-6f19d45110d7",
    "metadata": {
-    "id": "74504800-b929-4f8f-9f8b-6f19d45110d7"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "74504800-b929-4f8f-9f8b-6f19d45110d7",
+    "outputId": "ef38ddd9-3617-42c0-f472-59ae42ab58ae"
    },
    "outputs": [],
    "source": [
@@ -905,7 +934,11 @@
    "execution_count": null,
    "id": "ae5133a9-e427-41c3-a95e-166e07f858bc",
    "metadata": {
-    "id": "ae5133a9-e427-41c3-a95e-166e07f858bc"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ae5133a9-e427-41c3-a95e-166e07f858bc",
+    "outputId": "5e609d7b-d079-489c-c209-ab0ddfaabf90"
    },
    "outputs": [],
    "source": [
@@ -968,19 +1001,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0335e905-f817-487e-b4cc-7299f0c0fafb",
-   "metadata": {
-    "id": "0335e905-f817-487e-b4cc-7299f0c0fafb"
-   },
-   "outputs": [],
-   "source": [
-    "#verification of GPU availability:\n",
-    "print(torch.cuda.get_device_name(0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "59ca7773-6945-41e9-bc4f-d853386f7c46",
    "metadata": {
     "id": "59ca7773-6945-41e9-bc4f-d853386f7c46"
@@ -1021,11 +1041,14 @@
    "execution_count": null,
    "id": "cc47f885-862f-4205-a316-6045aea86aa8",
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
     "deletable": false,
     "id": "cc47f885-862f-4205-a316-6045aea86aa8",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "977665a9944ff9745ad712ec4dd6387a",
+     "checksum": "b30350cdfd80acd397e30becd0957306",
      "grade": false,
      "grade_id": "cell-631d663900b2f330",
      "locked": false,
@@ -1033,6 +1056,7 @@
      "solution": true,
      "task": false
     },
+    "outputId": "12603083-cb1d-47a3-cfe9-52683a7cffd1",
     "tags": []
    },
    "outputs": [],
@@ -1047,9 +1071,9 @@
     "\n",
     "for epoch in range(nepochs):\n",
     "    print(f\"Epoch {epoch + 1}/{nepochs}\")\n",
-    "    \n",
+    "\n",
     "    epoch_losses = []  # List to store losses for each batch in the epoch\n",
-    "    \n",
+    "\n",
     "    for i in range(nbatches):\n",
     "        # Load inputs\n",
     "        inputs, targets = gen(batchsize)\n",
@@ -1057,8 +1081,8 @@
     "        raise NotImplementedError()\n",
     "    epoch_loss = np.mean(epoch_losses)\n",
     "    train_losses.append(epoch_loss)\n",
-    "    \n",
-    "    print(f'Epoch loss: {epoch_loss:.4f}')    "
+    "\n",
+    "    print(f'Epoch loss: {epoch_loss:.4f}')"
    ]
   },
   {
@@ -1066,7 +1090,12 @@
    "execution_count": null,
    "id": "81b82258-13cc-4015-bbc8-33d59eccb9bb",
    "metadata": {
-    "id": "81b82258-13cc-4015-bbc8-33d59eccb9bb"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 467
+    },
+    "id": "81b82258-13cc-4015-bbc8-33d59eccb9bb",
+    "outputId": "e5f2568c-b875-4c7a-f5db-ff410dd3dde6"
    },
    "outputs": [],
    "source": [
@@ -1078,6 +1107,10 @@
    "execution_count": null,
    "id": "de7ef0ee-0cf3-402b-a41e-631b1836d9e4",
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 789
+    },
     "deletable": false,
     "id": "de7ef0ee-0cf3-402b-a41e-631b1836d9e4",
     "nbgrader": {
@@ -1089,7 +1122,8 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    }
+    },
+    "outputId": "07a60a75-0d8c-41f2-a277-4d66ee165e22"
    },
    "outputs": [],
    "source": [
