--- a/TP4/TP4_RNN.ipynb
+++ b/TP4/TP4_RNN.ipynb
@@ -19,17 +19,13 @@
    "execution_count": null,
    "id": "9uYTfLUUozlC",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "9uYTfLUUozlC",
-    "outputId": "cbb4e22e-bf6a-4beb-ba94-6ceb2ba19d93"
+    "id": "9uYTfLUUozlC"
    },
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import os\n",
-    "if os.path.exists(\"rnn.png\"):\n",
+    "if not os.path.exists(\"rnn.png\"):\n",
     "  ! git clone https://github.com/relmonta/ml-student.git\n",
     "  ! mv ml-student/TP4/*.png .\n",
     "  ! mv ml-student/TP4/*.csv ."
@@ -82,10 +78,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 352
+     "height": 353
     },
     "id": "wpOAZnugopKy",
-    "outputId": "0268678e-51d5-4e74-fcd2-09d27be30e10"
+    "outputId": "7d620344-9df1-450d-dd9c-c8d8b2be56d0"
    },
    "outputs": [],
    "source": [
@@ -113,10 +109,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 352
+     "height": 368
     },
     "id": "MemuEk4aovaS",
-    "outputId": "e53f656e-067c-4b15-8e77-fd77f8eaede9"
+    "outputId": "ec47f98a-906d-4105-a7c5-3ca81628d2a5"
    },
    "outputs": [],
    "source": [
@@ -184,10 +180,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 427
+     "height": 446
     },
     "id": "677266ea-8739-4376-aa74-4626b8eeb46b",
-    "outputId": "cfab24bb-35d4-487e-cfae-332b689f0a12"
+    "outputId": "0b2d2fe9-b7b3-4560-ac2a-079abeb06fa4"
    },
    "outputs": [],
    "source": [
@@ -257,7 +253,7 @@
     "id": "rDCF_eJFUsp-"
    },
    "source": [
-    "# Simple Fully Connected network"
+    "# Simple Perceptron (fully connected) network"
    ]
   },
   {
@@ -411,10 +407,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 564
+     "height": 565
     },
     "id": "_D81DloRVpBs",
-    "outputId": "979790ff-5f98-484c-b4eb-f1f14c4e82d7"
+    "outputId": "9b82a0ed-a86d-4a82-82db-42ee063377a9"
    },
    "outputs": [],
    "source": [
@@ -442,14 +438,14 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 512
+     "height": 538
     },
     "id": "IxX_ORK_WQDd",
-    "outputId": "c4945ff0-78ee-4db7-a003-275e680e0178"
+    "outputId": "9bf68e54-9966-46d8-dfd7-4efcb0a72054"
    },
    "outputs": [],
    "source": [
-    "input_size = 20\n",
+    "input_size = input_sequence_len\n",
     "hidden_size = 512\n",
     "epochs = 100\n",
     "\n",
@@ -522,7 +518,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "gqhp-W1IWCI3",
-    "outputId": "5cfaf23b-4d54-4edb-97c0-aa82c7872fc8"
+    "outputId": "126e350d-941f-4dd0-f1ff-3111a142fd07"
    },
    "outputs": [],
    "source": [
@@ -560,10 +556,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 460
+     "height": 488
     },
     "id": "ZjTOknC8W6-k",
-    "outputId": "aa32af4e-dedb-4da9-82a9-267e781337b1"
+    "outputId": "ef4bcce2-7582-4b0b-b1f4-65acda528cce"
    },
    "outputs": [],
    "source": [
@@ -644,10 +640,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 512
+     "height": 538
     },
     "id": "efDgLC-RB1dz",
-    "outputId": "9dcb9cf1-c961-4316-bcce-ee672c17af59"
+    "outputId": "44482d78-b483-49bd-ce40-38ecb748d04d"
    },
    "outputs": [],
    "source": [
@@ -669,7 +665,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "RXImrgSipi3X",
-    "outputId": "308ca132-d950-4834-ccbc-74c66147674a"
+    "outputId": "8d2bc048-1ef9-4cbf-a87e-2118a40c421f"
    },
    "outputs": [],
    "source": [
@@ -684,10 +680,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 460
+     "height": 488
     },
     "id": "Se-WI1-hETEv",
-    "outputId": "0fef940c-cb4d-4b75-c420-8bf6ff5b82a6"
+    "outputId": "82286441-0271-44ce-d05b-6cbac6c8c8f4"
    },
    "outputs": [],
    "source": [
@@ -716,10 +712,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 487
+     "height": 536
     },
     "id": "M_Dx3sDPpu5L",
-    "outputId": "c718856e-100d-4119-af05-07a961438a60"
+    "outputId": "e160b7be-bfe3-44c3-dfc9-70e0acfe470b"
    },
    "outputs": [],
    "source": [
@@ -800,10 +796,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 508
+     "height": 538
     },
     "id": "AwtWKapCoivI",
-    "outputId": "8c204c82-0f11-45a3-fc53-4195a73ae6c2"
+    "outputId": "f3a36f90-c799-47a3-d8af-acded9766524"
    },
    "outputs": [],
    "source": [
@@ -823,10 +819,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 496
+     "height": 521
     },
     "id": "o-QB6W9IoxHp",
-    "outputId": "a7693717-1c22-4c9b-8ad9-12fe81831595"
+    "outputId": "6518dd67-887b-4c5d-e987-122d68478ea4"
    },
    "outputs": [],
    "source": [
@@ -912,10 +908,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 515
+     "height": 538
     },
     "id": "f9r-6VppmEXq",
-    "outputId": "89c71611-3ee8-4fff-fc97-6114b19de943"
+    "outputId": "2c7b2228-eefc-498a-935c-7c90ac7f11df"
    },
    "outputs": [],
    "source": [
@@ -936,10 +932,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 496
+     "height": 521
     },
     "id": "00ZgcIODmYdF",
-    "outputId": "aa85816c-c535-4e5b-d4e4-1970b4a5ea83"
+    "outputId": "952431e3-9b54-4d6a-e17d-ef176cdfe042"
    },
    "outputs": [],
    "source": [
@@ -954,16 +950,16 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 458
+     "height": 488
     },
     "id": "wsmeWtPF_Jk1",
-    "outputId": "d884d76b-ba82-4b7e-8e59-330475181de1"
+    "outputId": "7ab84308-b3ea-4264-9bc5-59ef3c9e6918"
    },
    "outputs": [],
    "source": [
     "# Prediction errors comparison\n",
     "plt.figure(figsize=(14,5))\n",
-    "plt.plot(range(len(train_data),len(train_data)+future_steps),rnn_errors,\n",
+    "plt.plot(range(len(train_data),len(train_data)+future_steps),fc_errors,\n",
     "         label=f\"Simple FC | Mean error : {np.mean(fc_errors):.4f}\",linewidth=2)\n",
     "plt.plot(range(len(train_data),len(train_data)+future_steps),rnn_errors,\n",
     "         label=f\"Simple RNN | Mean error : {np.mean(rnn_errors):.4f}\",linewidth=2)\n",
@@ -1010,10 +1006,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 440
+     "height": 466
     },
     "id": "CKzXpItL59SG",
-    "outputId": "5a6592d4-23cf-4678-f3b0-e087aa2b4488"
+    "outputId": "e2bceb55-5dc9-4968-8ed5-493f294e8d78"
    },
    "outputs": [],
    "source": [
@@ -1032,10 +1028,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 445
+     "height": 466
     },
     "id": "Gp4x0bjI2Inp",
-    "outputId": "216af9c9-48e5-4504-8763-bd9e89fc1953"
+    "outputId": "40734aea-72e1-4d3b-d027-97680006b1c2"
    },
    "outputs": [],
    "source": [
@@ -1074,7 +1070,7 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 523
+     "height": 538
     },
     "deletable": false,
     "id": "AZkpv5wm6Frm",
@@ -1088,7 +1084,7 @@
      "solution": true,
      "task": false
     },
-    "outputId": "e3262e7b-8a57-4151-95ee-4f3a6dca4d2f",
+    "outputId": "d0249ad3-b15a-41e3-b551-7c3e0ce60cee",
     "tags": []
    },
    "outputs": [],
@@ -1109,7 +1105,7 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 502
+     "height": 521
     },
     "deletable": false,
     "id": "1ugxden27o2x",
@@ -1123,7 +1119,7 @@
      "solution": true,
      "task": false
     },
-    "outputId": "d328962d-a975-4147-d962-a17541ddbc5b",
+    "outputId": "7e64b157-08b8-41a4-b866-a6a04563c8b5",
     "tags": []
    },
    "outputs": [],
