--- a/TP4/TP4_RNN.ipynb
+++ b/TP4/TP4_RNN.ipynb
@@ -19,7 +19,11 @@
    "execution_count": null,
    "id": "9uYTfLUUozlC",
    "metadata": {
-    "id": "9uYTfLUUozlC"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "9uYTfLUUozlC",
+    "outputId": "e3fb8118-5063-4e78-e275-cfe0210ddc5f"
    },
    "outputs": [],
    "source": [
@@ -78,10 +82,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 353
+     "height": 373
     },
     "id": "wpOAZnugopKy",
-    "outputId": "7d620344-9df1-450d-dd9c-c8d8b2be56d0"
+    "outputId": "3ba6d152-0c8d-4a7c-baa4-6189e491075b"
    },
    "outputs": [],
    "source": [
@@ -109,10 +113,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 368
+     "height": 320
     },
     "id": "MemuEk4aovaS",
-    "outputId": "ec47f98a-906d-4105-a7c5-3ca81628d2a5"
+    "outputId": "96b1372c-9051-4f1d-d815-913c74cf5f6f"
    },
    "outputs": [],
    "source": [
@@ -180,10 +184,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 446
+     "height": 466
     },
     "id": "677266ea-8739-4376-aa74-4626b8eeb46b",
-    "outputId": "0b2d2fe9-b7b3-4560-ac2a-079abeb06fa4"
+    "outputId": "cc45d7d8-873b-40b6-cff1-830beb02d3ec"
    },
    "outputs": [],
    "source": [
@@ -407,10 +411,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 565
+     "height": 585
     },
     "id": "_D81DloRVpBs",
-    "outputId": "9b82a0ed-a86d-4a82-82db-42ee063377a9"
+    "outputId": "847e15fe-656f-427d-f680-1990e7faede7"
    },
    "outputs": [],
    "source": [
@@ -438,10 +442,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 538
+     "height": 558
     },
     "id": "IxX_ORK_WQDd",
-    "outputId": "9bf68e54-9966-46d8-dfd7-4efcb0a72054"
+    "outputId": "313d3e97-3ae8-4f20-e0ed-d02d37a2365e"
    },
    "outputs": [],
    "source": [
@@ -518,7 +522,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "gqhp-W1IWCI3",
-    "outputId": "126e350d-941f-4dd0-f1ff-3111a142fd07"
+    "outputId": "51219f64-6413-43ff-dbde-43ae03cc6b9a"
    },
    "outputs": [],
    "source": [
@@ -556,10 +560,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 488
+     "height": 508
     },
     "id": "ZjTOknC8W6-k",
-    "outputId": "ef4bcce2-7582-4b0b-b1f4-65acda528cce"
+    "outputId": "659437a6-ec6f-4032-bb19-82b7699605a3"
    },
    "outputs": [],
    "source": [
@@ -640,10 +644,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 538
+     "height": 558
     },
     "id": "efDgLC-RB1dz",
-    "outputId": "44482d78-b483-49bd-ce40-38ecb748d04d"
+    "outputId": "f02aaaf7-2b98-4cab-8042-8fb042a0ff86"
    },
    "outputs": [],
    "source": [
@@ -665,7 +669,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "RXImrgSipi3X",
-    "outputId": "8d2bc048-1ef9-4cbf-a87e-2118a40c421f"
+    "outputId": "009b6bba-4bdc-453b-cd22-d72f55eff81a"
    },
    "outputs": [],
    "source": [
@@ -680,10 +684,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 488
+     "height": 508
     },
     "id": "Se-WI1-hETEv",
-    "outputId": "82286441-0271-44ce-d05b-6cbac6c8c8f4"
+    "outputId": "de5966a2-f5f1-45c7-99e3-8aed34952f19"
    },
    "outputs": [],
    "source": [
@@ -712,10 +716,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 536
+     "height": 556
     },
     "id": "M_Dx3sDPpu5L",
-    "outputId": "e160b7be-bfe3-44c3-dfc9-70e0acfe470b"
+    "outputId": "f94e4af6-af9f-457f-c5bb-30de55c1917c"
    },
    "outputs": [],
    "source": [
@@ -796,10 +800,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 538
+     "height": 558
     },
     "id": "AwtWKapCoivI",
-    "outputId": "f3a36f90-c799-47a3-d8af-acded9766524"
+    "outputId": "9d729f7a-8568-4a62-f335-31c15d36859c"
    },
    "outputs": [],
    "source": [
@@ -819,10 +823,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 521
+     "height": 541
     },
     "id": "o-QB6W9IoxHp",
-    "outputId": "6518dd67-887b-4c5d-e987-122d68478ea4"
+    "outputId": "69d7cc7e-2d24-4659-ec35-8720e4457777"
    },
    "outputs": [],
    "source": [
@@ -908,10 +912,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 538
+     "height": 558
     },
     "id": "f9r-6VppmEXq",
-    "outputId": "2c7b2228-eefc-498a-935c-7c90ac7f11df"
+    "outputId": "7fc5995e-89e2-4912-b4cb-8ef2fce0f036"
    },
    "outputs": [],
    "source": [
@@ -932,10 +936,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 521
+     "height": 541
     },
     "id": "00ZgcIODmYdF",
-    "outputId": "952431e3-9b54-4d6a-e17d-ef176cdfe042"
+    "outputId": "fa0963b0-165d-4cf7-9060-375e3d4c3de3"
    },
    "outputs": [],
    "source": [
@@ -950,10 +954,10 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 488
+     "height": 508
     },
     "id": "wsmeWtPF_Jk1",
-    "outputId": "7ab84308-b3ea-4264-9bc5-59ef3c9e6918"
+    "outputId": "4ed2a3d2-1a3e-46ca-ef7a-01038ea90ab6"
    },
    "outputs": [],
    "source": [
@@ -985,18 +989,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "zA0RMFZ5--Ak",
+   "metadata": {
+    "id": "zA0RMFZ5--Ak"
+   },
+   "source": [
+    "## Data preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "jPpBLF0REvX_",
    "metadata": {
-    "id": "jPpBLF0REvX_"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 433
+    },
+    "id": "jPpBLF0REvX_",
+    "outputId": "d3b60e52-c565-49e7-ca9a-949d0ead867b"
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "file_path = \"/content/temperatures.csv\"\n",
-    "df = pd.read_csv(file_path, header=None, sep=\" \")\n",
-    "df = df.rename(columns={df.columns[0]: 'Date',df.columns[-1]: 'Temperature'})"
+    "file_path = \"/content/temp_pointe_du_raz.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mNowtGlFk9F4",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 433
+    },
+    "id": "mNowtGlFk9F4",
+    "outputId": "9885dad9-36dd-4888-923a-53b39b8a4e25"
+   },
+   "outputs": [],
+   "source": [
+    "df['timestamp'] = pd.to_datetime(df['date'],format='%Y%m%d%H%M%S')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "wqp-9DMfnOs6",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 433
+    },
+    "id": "wqp-9DMfnOs6",
+    "outputId": "4cba306a-e22d-421a-85f1-b13195c7f5f2"
+   },
+   "outputs": [],
+   "source": [
+    "df['year'] = df['timestamp'].dt.year\n",
+    "df['month'] = df['timestamp'].dt.month\n",
+    "df['day'] = df['timestamp'].dt.day\n",
+    "df['hour'] = df['timestamp'].dt.hour\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "_2_WaUFflHdt",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 433
+    },
+    "id": "_2_WaUFflHdt",
+    "outputId": "76a4e9a2-f320-4c88-f9c8-e7a795565b00"
+   },
+   "outputs": [],
+   "source": [
+    "# One-hot encoding\n",
+    "df_encoded = pd.get_dummies(df, columns=['month'])\n",
+    "# Alternatively, we use cyclical encoding for hours\n",
+    "df_encoded['hour_sin'] = np.sin(2 * np.pi * df['hour'] / 24)\n",
+    "df_encoded['hour_cos'] = np.cos(2 * np.pi * df['hour'] / 24)\n",
+    "\n",
+    "# Kelvin to degrees celsius\n",
+    "df_encoded['unclean_temperature'] = df['temperature (Kelvin)'] - 273.15\n",
+    "\n",
+    "# Normalise the temperatures into a range of [0, 1],\n",
+    "# to ensure that all input features are on a similar scale\n",
+    "min_temp = df_encoded['unclean_temperature'].min()\n",
+    "max_temp = df_encoded['unclean_temperature'].max()\n",
+    "df_encoded['unclean_temperature'] = (df_encoded['unclean_temperature'] - min_temp) / (max_temp - min_temp)\n",
+    "# Same for days\n",
+    "df_encoded['day'] = df_encoded['day']/31\n",
+    "\n",
+    "# Remove unused columns\n",
+    "columns_to_drop = ['year','date', 'timestamp', 'hour','temperature (Kelvin)']\n",
+    "df_encoded = df_encoded.drop(columns=columns_to_drop, axis=1)\n",
+    "df_encoded"
    ]
   },
   {
@@ -1006,16 +1101,16 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 466
+     "height": 486
     },
     "id": "CKzXpItL59SG",
-    "outputId": "e2bceb55-5dc9-4968-8ed5-493f294e8d78"
+    "outputId": "9690607f-d705-4644-eea9-72e3468e79b4"
    },
    "outputs": [],
    "source": [
-    "real_data = np.array(df.Temperature)-273.15 # − 273.15 to go from K to °C\n",
+    "temp_data = np.array(df_encoded.unclean_temperature)*(max_temp - min_temp) + min_temp\n",
     "plt.figure(figsize=(14,5))\n",
-    "plt.plot(real_data)\n",
+    "plt.plot(temp_data)\n",
     "plt.xlabel(\"Time steps (in hours)\")\n",
     "plt.ylabel(\"Temperature (°C)\")\n",
     "plt.show()"
@@ -1024,33 +1119,155 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "Gp4x0bjI2Inp",
+   "id": "xsQzU6HOvNxD",
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 466
+     "base_uri": "https://localhost:8080/"
     },
-    "id": "Gp4x0bjI2Inp",
-    "outputId": "40734aea-72e1-4d3b-d027-97680006b1c2"
+    "id": "xsQzU6HOvNxD",
+    "outputId": "601365a9-c51d-4111-b46d-178a47d92592"
    },
    "outputs": [],
    "source": [
-    "split_at = 1900\n",
-    "train_data = real_data[:split_at]\n",
-    "test_data = real_data[split_at:]\n",
+    "nan_indices = np.array(df_encoded.index[df_encoded.unclean_temperature.isna()])\n",
+    "print(nan_indices[:100]) # broken continuosly from index 56675\n",
+    "print(\"=====\")\n",
+    "print(nan_indices[-100:]) # until 104083\n",
+    "nan_started = 56675\n",
+    "nan_stopped = 104083\n",
+    "other_missing_indices = np.arange(11122,11134)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "LL9NlZIG5KX7",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 440
+    },
+    "id": "LL9NlZIG5KX7",
+    "outputId": "886c825e-9e8b-4ba0-d307-c20ce8177d71"
+   },
+   "outputs": [],
+   "source": [
+    "subset_to_fill = df_encoded.loc[:nan_started, 'unclean_temperature']\n",
     "\n",
-    "start_plot = 1700\n",
-    "stop_plot = len(real_data)\n",
-    "plt.figure(figsize=(14,5))\n",
-    "plt.plot(range(start_plot, split_at),real_data[start_plot:split_at],label=\"train data\")\n",
-    "plt.plot(range(split_at, stop_plot),test_data[:stop_plot-split_at],label=\"test data\")\n",
-    "plt.xlabel(\"Time steps (in hours)\")\n",
-    "plt.ylabel(\"Temperature (°C)\")\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "# Converting data to PyTorch tensor\n",
-    "train_data = torch.FloatTensor(train_data).view(-1, 1)\n",
-    "test_data = torch.FloatTensor(test_data).view(-1, 1)"
+    "# Fill missing values using the last valid observation\n",
+    "df_encoded['temperature'] = df_encoded[\"unclean_temperature\"]\n",
+    "df_encoded.loc[:nan_started, 'temperature'] = subset_to_fill.ffill()\n",
+    "\n",
+    "subset_to_fill = df_encoded.loc[nan_stopped:, 'unclean_temperature']\n",
+    "df_encoded.loc[nan_stopped:, 'temperature'] = subset_to_fill.ffill()\n",
+    "\n",
+    "df_encoded.loc[nan_indices[:10]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "HXqFjJF8sZrw",
+   "metadata": {
+    "deletable": false,
+    "id": "HXqFjJF8sZrw",
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "5dcabfff032cba0cab667a28c8c9a2b5",
+     "grade": false,
+     "grade_id": "cell-b4d18679b0f6e0da",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pandas.core.dtypes import missing\n",
+    "class TimeSeriesDataset(Dataset):\n",
+    "    \"\"\"\n",
+    "    PyTorch Dataset for the time series data.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, dataframe, input_sequence_len, output_size=1, nan_started=0, nan_stopped=0, missing_indices=np.array([])):\n",
+    "        self.data = dataframe\n",
+    "        self.input_sequence_len = input_sequence_len\n",
+    "        self.output_size = output_size\n",
+    "        self.nan_started = nan_started\n",
+    "        self.missing_data_len = nan_stopped - nan_started\n",
+    "        self.missing_indices = missing_indices\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data) - self.input_sequence_len - 2*self.output_size - 2*self.missing_data_len\n",
+    "\n",
+    "    def __getitem__(self, start_idx):\n",
+    "        stop_sequence_idx = start_idx + self.input_sequence_len\n",
+    "        stop_target_idx = stop_sequence_idx + self.output_size\n",
+    "        # If considered sequence intersects with the missing value list [11122, .... ,11133]\n",
+    "        # jump to 11134 index\n",
+    "        if np.intersect1d(np.arange(start_idx, stop_target_idx), self.missing_indices).size > 0:\n",
+    "          start_idx = self.missing_indices[-1] + 1\n",
+    "\n",
+    "        # Avoid the missing data range\n",
+    "        if stop_target_idx >= self.nan_started :\n",
+    "            start_idx += self.missing_data_len + self.input_sequence_len + self.output_size\n",
+    "            stop_sequence_idx = start_idx + self.input_sequence_len\n",
+    "            stop_target_idx = stop_sequence_idx + self.output_size\n",
+    "        # Extracting a sequence of data\n",
+    "        # YOUR CODE HERE\n",
+    "        raise NotImplementedError()\n",
+    "        return {'sequence': torch.Tensor(sequence), 'target': torch.Tensor(target)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "svIjr-hgBSG1",
+   "metadata": {
+    "id": "svIjr-hgBSG1"
+   },
+   "outputs": [],
+   "source": [
+    "split_at = -1000\n",
+    "train_df = df_encoded.iloc[:split_at]\n",
+    "test_df = df_encoded.iloc[split_at:]\n",
+    "\n",
+    "input_sequence_len = 20\n",
+    "output_size = 3\n",
+    "\n",
+    "dataset = TimeSeriesDataset(train_df, input_sequence_len, output_size=output_size)\n",
+    "dataloader = DataLoader(dataset, batch_size=64, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "Kmlr8_9OBsAJ",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "Kmlr8_9OBsAJ",
+    "outputId": "f1de7bba-912f-4ec1-9337-9c2191660955"
+   },
+   "outputs": [],
+   "source": [
+    "sample_batch = next(iter(dataloader))\n",
+    "\n",
+    "print(sample_batch['sequence'].shape)\n",
+    "print(sample_batch['target'].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "Wq8E8KxxF8bB",
+   "metadata": {
+    "id": "Wq8E8KxxF8bB"
+   },
+   "source": [
+    "## Model training"
    ]
   },
   {
@@ -1070,13 +1287,13 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 538
+     "height": 413
     },
     "deletable": false,
     "id": "AZkpv5wm6Frm",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "78bd4b78c7f251b945c45969189c0b0c",
+     "checksum": "e169ccce97ef9c890aa2cbbcce5d90bb",
      "grade": false,
      "grade_id": "cell-826a173d85267a64",
      "locked": false,
@@ -1084,18 +1301,27 @@
      "solution": true,
      "task": false
     },
-    "outputId": "d0249ad3-b15a-41e3-b551-7c3e0ce60cee",
+    "outputId": "d0d02573-29ad-4bee-c390-c5f0b93bb680",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "input_size = 1\n",
-    "hidden_size = 64\n",
-    "output_size = 1\n",
+    "input_size = ...\n",
+    "hidden_size = ...\n",
     "\n",
     "input_sequence_len = 2*24 # Take the last 72 hours as an input sequence\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dEc9-RyGGCCd",
+   "metadata": {
+    "id": "dEc9-RyGGCCd"
+   },
+   "source": [
+    "## Testing"
    ]
   },
   {
